--- a/system_dashboard.html
+++ b/system_dashboard.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>freeboard</title>
+
 	<meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content = "width = device-width, initial-scale = 1, user-scalable = no" />
+
     <link href="css/freeboard.min.css" rel="stylesheet" />
+
     <script src="js/freeboard.thirdparty.min.js"></script>
+    <script src="plugins/thirdparty/moment.js"></script>
 </head>
 <body>
 
@@ -157,6 +161,29 @@
                                                 "units": "MB"
                                             }
                                         }
+                                    ]
+                                },
+                                {
+                                    "title": "Battery",
+                                    "width": 1,
+                                    "row": {
+                                        "3": 1
+                                    },
+                                    "col": {
+                                        "3": 2
+                                    },
+                                    "col_width": 1,
+                                    "widgets": [
+                                        {
+                                            "type": "gauge",
+                                            "settings": {
+                                                "title": "On Charge",
+                                                "value": "datasources[\"System Dashboard Flask\"][\"battery\"][\"percentage_left\"].toFixed(0)",
+                                                "units": "%",
+                                                "min_value": "0",
+                                                "max_value": "100"
+                                            }
+                                        },
                                     ]
                                 },
                                 {
